--- a/front-tasks/src/components/ui/UserOptions/UserOptions.css
+++ b/front-tasks/src/components/ui/UserOptions/UserOptions.css
@@ -15,7 +15,7 @@
   list-style: none;
 }
 
-.user-options-container button {
+.user-options-container.is_collapsed button {
   width: 60px;
   height: 34px;
 }
